[SITE] Resharper; Layout ajust; Discarding unnecessary libraries
by [aripmav1896@gmail.com] in [2011-08-24 22:19:53 (-03:00)]

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -126,6 +126,10 @@
     <Content Include="Assets\js\Back.js" />
     <Content Include="Assets\js\Author\Suggestion.js" />
     <Content Include="Assets\js\Legend.js" />
+    <Content Include="Assets\js\lib\jquery-1.6.1.min.js" />
+    <Content Include="Assets\js\lib\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Assets\js\lib\jquery.validate.min.js" />
+    <Content Include="Assets\js\lib\jquery.validate.unobtrusive.min.js" />
     <Content Include="Assets\js\lib\NumericValue.js" />
     <Content Include="Assets\js\lib\Scale.js" />
     <Content Include="Assets\js\General.js" />
