[SITE] Ajusts on css and add of Ak
by [aripmav1896@gmail.com] in [2011-10-22 00:45:21 (-02:00)]

--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -9,7 +9,7 @@
     <add key="ClientValidationEnabled" value="true" /> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Path" value="..\..\..\Handhara\MEAK\"/>
+    <add key="Path" value="..\..\..\..\Handhara\MEAK\"/>
   </appSettings>
     
   <system.web>
