[SITE] Refactor Resharper
by [handhara] in [2011-11-03 17:14:14 (-02:00)]

--- a/Structure/Structure.csproj
+++ b/Structure/Structure.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Data\ParagraphXML.cs" />
     <Compile Include="Data\PieceXML.cs" />
     <Compile Include="Entities\Episode.cs" />
-    <Compile Include="Enums\eOpenEpisodeOption.cs" />
-    <Compile Include="Enums\eTalkStyle.cs" />
-    <Compile Include="Enums\eTellerStyle.cs" />
+    <Compile Include="Enums\OpenEpisodeOption.cs" />
+    <Compile Include="Enums\TalkStyle.cs" />
+    <Compile Include="Enums\TellerStyle.cs" />
     <Compile Include="Entities\Paragraph.cs" />
     <Compile Include="Entities\Piece.cs" />
     <Compile Include="Enums\eParagraph.cs" />
