[SITE] Site working. Must divide stories in scenes
by [handhara] in [2011-11-03 19:52:38 (-02:00)]

--- a/Structure/Structure.csproj
+++ b/Structure/Structure.csproj
@@ -45,16 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\EpisodeXML.cs" />
+    <Compile Include="Data\SceneXML.cs" />
     <Compile Include="Data\ParagraphXML.cs" />
     <Compile Include="Data\PieceXML.cs" />
+    <Compile Include="Entities\Scene.cs" />
     <Compile Include="Entities\Episode.cs" />
     <Compile Include="Enums\OpenEpisodeOption.cs" />
     <Compile Include="Enums\TalkStyle.cs" />
     <Compile Include="Enums\TellerStyle.cs" />
     <Compile Include="Entities\Paragraph.cs" />
     <Compile Include="Entities\Piece.cs" />
-    <Compile Include="Enums\eParagraph.cs" />
+    <Compile Include="Enums\ParagraphType.cs" />
     <Compile Include="Entities\Talk.cs" />
     <Compile Include="Entities\Teller.cs" />
     <Compile Include="Extensions\FileInfoExtension.cs" />
