--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -33,6 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ak.DataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="Ak.Generic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Ak.MVC">
       <HintPath>..\Library\Ak\Ak.MVC.dll</HintPath>
     </Reference>
