[SITE] Title put. Problem with teller and talk losing the T solved
by [handhara] in [2011-11-04 21:00:41 (-02:00)]

--- a/Structure/Structure.csproj
+++ b/Structure/Structure.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Data\SceneXML.cs" />
     <Compile Include="Data\ParagraphXML.cs" />
     <Compile Include="Data\PieceXML.cs" />
+    <Compile Include="Data\TitleXML.cs" />
     <Compile Include="Entities\Scene.cs" />
     <Compile Include="Entities\Episode.cs" />
     <Compile Include="Enums\OpenEpisodeOption.cs" />
