--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -190,6 +190,9 @@
   <ItemGroup>
     <Content Include="Views\Season\Author\AddEpisode.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Season\Author\Scene.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
