[SITE] Button for Resize Text
by [handhara] in [2011-11-22 15:29:02 (-02:00)]

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -75,6 +75,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\css\Author\screen_LogOn.css" />
+    <Content Include="Assets\css\screen_Resize.css" />
     <Content Include="Assets\css\screen_Scene.css" />
     <Content Include="Assets\css\screen_Legend.css" />
     <Content Include="Assets\css\Season.css" />
@@ -133,6 +134,7 @@
     <Content Include="Assets\js\Author\SaveChangeColor.js" />
     <Content Include="Assets\js\Back.js" />
     <Content Include="Assets\js\Author\Suggestion.js" />
+    <Content Include="Assets\js\FontResizer.js" />
     <Content Include="Assets\js\SceneChanger.js" />
     <Content Include="Assets\js\Legend.js" />
     <Content Include="Assets\js\lib\jquery-1.6.1.min.js" />
