[SITE] Possível ir direto a uma cena
by [Handhara Akeon (Ísis)] in [2012-03-08 19:03:38 (-03:00)]

--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -9,7 +9,7 @@
     <add key="ClientValidationEnabled" value="true" /> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Path" value="..\..\..\..\Handhara\MEAK\Stories\"/>
+    <add key="Path" value="K:\Handhara\MEAK\Stories\"/>
   </appSettings>
     
   <system.web>
