--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>Presentation</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -102,6 +103,7 @@
     <Compile Include="Models\General\LogOnModel.cs" />
     <Compile Include="Models\General\MenuModel.cs" />
     <Compile Include="Helpers\SeasonEpisode.cs" />
+    <Compile Include="Models\General\TopSelectorModel.cs" />
     <Compile Include="Models\SeasonEpisodeModel.cs" />
     <Compile Include="Models\SeasonIndexModel.cs" />
     <Compile Include="Models\SeasonSeasonModel.cs" />
