--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -76,6 +76,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\css\Author\screen_LogOn.css" />
+    <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
     <Content Include="Assets\css\screen_Resize.css" />
     <Content Include="Assets\css\screen_Scene.css" />
     <Content Include="Assets\css\screen_Legend.css" />
@@ -137,6 +138,7 @@
     <Content Include="Assets\js\Back.js" />
     <Content Include="Assets\js\Author\Suggestion.js" />
     <Content Include="Assets\js\FontResizer.js" />
+    <Content Include="Assets\js\Menu.js" />
     <Content Include="Assets\js\SceneChanger.js" />
     <Content Include="Assets\js\Legend.js" />
     <Content Include="Assets\js\lib\jquery-1.6.1.min.js" />
