--- a/Structure/Structure.csproj
+++ b/Structure/Structure.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Data\SceneXML.cs" />
     <Compile Include="Data\ParagraphXML.cs" />
     <Compile Include="Data\PieceXML.cs" />
-    <Compile Include="Data\TitleXML.cs" />
+    <Compile Include="Data\MainInfoXML.cs" />
     <Compile Include="Entities\Scene.cs" />
     <Compile Include="Entities\Episode.cs" />
     <Compile Include="Enums\OpenEpisodeOption.cs" />
