[SITE] Fixing to submit an scene until 1500 paragraphs
by [aripmav1896@gmail.com] in [2012-05-13 04:44:49 (-03:00)]

--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -10,6 +10,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="Path" value="..\..\..\..\Handhara\MEAK\Stories\"/>
+
+    <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
+
   </appSettings>
     
   <system.web>
