[SITE] Firts real publishing
by [Handhara Akeon (Ísis)] in [2012-06-26 21:36:15 (-03:00)]

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -72,9 +72,7 @@
     <Content Include="Assets\css\Author\screen_AddEpisode.css" />
     <Content Include="Assets\css\Author\screen_Adder.css" />
     <Content Include="Assets\css\Author\screen_Suggestion.css" />
-    <Content Include="Assets\css\Author\screen_Form.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Assets\css\Author\screen_Form.css" />
     <Content Include="Assets\css\Author\screen_LogOn.css" />
     <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
     <Content Include="Assets\css\screen_Resize.css" />
