[SITE] Making author not work in arvixe
by [Handhara Akeon (Ísis)] in [2012-06-26 22:14:57 (-03:00)]

--- a/Presentation/Web.Release.config
+++ b/Presentation/Web.Release.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="Path" value="/Stories/" 
+    <add key="Path" value="Stories" 
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 </configuration>
