--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -40,6 +40,8 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
+
+    <customErrors mode="Off" />
   </system.web>
 
   <system.webServer>
