--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -124,7 +124,7 @@
     <Content Include="Assets\images\boxes\red_background.jpg" />
     <Content Include="Assets\images\boxes\yellow_background.jpg" />
     <Content Include="Assets\images\favicon.png" />
-    <Content Include="Assets\images\logo.gif" />
+    <Content Include="Assets\images\logo.png" />
     <Content Include="Assets\images\next.gif" />
     <Content Include="Assets\images\prev.gif" />
     <Content Include="Assets\images\sign.gif" />
