--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -10,7 +10,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <!--add key="Path" value="..\..\..\..\Handhara\MEAK\Stories\"/-->
-    <add key="Path" value="K:\Handhara\MEAK\Stories\"/>
+    <add key="Path" value="C:\Lucas\Handhara\MEAK\Stories\"/>
 
     <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 
