--- a/Presentation/Web.Local.config
+++ b/Presentation/Web.Local.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0"?>
 
-<!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
-
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+
   <appSettings>
-    <add key="Path" value="Stories" 
+    <add key="Stories" value="C:\Lucas\Handhara\MEAK\Stories\"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
+
 </configuration>
