--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -9,7 +9,8 @@
     <add key="ClientValidationEnabled" value="true" /> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Path" value="..\..\..\..\Handhara\MEAK\Stories\" />
+    <add key="Stories" value="..\..\..\..\Handhara\MEAK\Stories\" />
+    <add key="Messages" value="Messages" />
 
     <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 
