--- a/Presentation/Web.Online.config
+++ b/Presentation/Web.Online.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0"?>
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+
   <appSettings>
-    <add key="Path" value="C:\Lucas\Handhara\MEAK\Stories\"
+    <add key="Stories" value="Stories"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
-
+  
 </configuration>
