--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -202,7 +202,7 @@
     <Content Include="Views\Season\Episode.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Season\Season.cshtml" />
+    <Content Include="Views\Season\Summary.cshtml" />
     <Content Include="Views\Season\Author\Episode.cshtml" />
     <Content Include="Views\Season\Author\TalkPiece.cshtml" />
     <Content Include="Views\Season\Author\TellerPiece.cshtml" />
