--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{95183A9E-DC9C-48FF-90B4-DE7507D5DF06}</ProjectGuid>
-    <ProjectTypeGuids>{E53F8FEA-EAE0-44A6-8774-FFD645390401};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <ProjectGuid>{B2A9775B-2029-48B6-BDE6-336A6C78C22F}</ProjectGuid>
+    <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Presentation</RootNamespace>
@@ -33,51 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Online|AnyCPU'">
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <CodeAnalysisLogFile>bin\Presentation.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
-    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
-    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
-    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Local|AnyCPU'">
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <CodeAnalysisLogFile>bin\Presentation.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
-    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
-    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
-    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ak.DataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="Ak.Generic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="Ak.MVC">
-      <HintPath>..\Library\Ak\Ak.MVC.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Web.WebPages" />
-    <Reference Include="System.Web.Helpers" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -91,58 +48,106 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Web.Abstractions">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Web.Routing">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Net.Http.2.0.20710.0\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.20710.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Net.Http.2.0.20710.0\lib\net40\System.Net.Http.WebRequest.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.4.0.20710.0\lib\net40\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.4.0.20710.0\lib\net40\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.20710.0\lib\net40\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.20710.0\lib\net40\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\css\Author\screen_AddEpisode.css" />
-    <Content Include="Assets\css\Author\screen_Adder.css" />
-    <Content Include="Assets\css\Author\screen_Suggestion.css" />
-    <Content Include="Assets\css\Author\screen_Form.css" />
-    <Content Include="Assets\css\Author\screen_LogOn.css" />
-    <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
-    <Content Include="Assets\css\screen_Resize.css" />
-    <Content Include="Assets\css\screen_Scene.css" />
-    <Content Include="Assets\css\screen_Legend.css" />
-    <Content Include="Assets\css\Season.css" />
-    <Content Include="Assets\css\Main.css" />
-    <Content Include="Assets\css\print_Print.css" />
-    <Content Include="Assets\css\screen_Navigation.css" />
-    <Content Include="Assets\css\Episode.css" />
-    <Content Include="Assets\css\screen_Menu.css" />
-    <Content Include="Assets\css\screen_Head.css" />
-    <Content Include="Assets\css\screen_Main.css" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Adder.cs" />
+    <Compile Include="Helpers\SeasonEpisode.cs" />
     <Compile Include="Helpers\StoriesAuthorizeAttribute.cs" />
     <Compile Include="Models\BaseModel.cs" />
-    <Compile Include="Models\SeasonAddEpisodeModel.cs" />
-    <Compile Include="Models\SeasonEditEpisodeModel.cs" />
     <Compile Include="Models\ErrorModel.cs" />
     <Compile Include="Models\General\CssModel.cs" />
     <Compile Include="Models\General\LogOnModel.cs" />
     <Compile Include="Models\General\MenuModel.cs" />
-    <Compile Include="Helpers\SeasonEpisode.cs" />
     <Compile Include="Models\General\TopSelectorModel.cs" />
+    <Compile Include="Models\SeasonAddEpisodeModel.cs" />
+    <Compile Include="Models\SeasonEditEpisodeModel.cs" />
     <Compile Include="Models\SeasonEpisodeModel.cs" />
     <Compile Include="Models\SeasonIndexModel.cs" />
     <Compile Include="Models\SeasonSeasonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Assets\css\Author\screen_AddEpisode.css" />
+    <Content Include="Assets\css\Author\screen_Adder.css" />
+    <Content Include="Assets\css\Author\screen_Form.css" />
+    <Content Include="Assets\css\Author\screen_LogOn.css" />
+    <Content Include="Assets\css\Author\screen_Suggestion.css" />
+    <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
+    <Content Include="Assets\css\Episode.css" />
+    <Content Include="Assets\css\Main.css" />
+    <Content Include="Assets\css\print_Print.css" />
     <Content Include="Assets\css\screen_Back.css" />
+    <Content Include="Assets\css\screen_Head.css" />
+    <Content Include="Assets\css\screen_Legend.css" />
+    <Content Include="Assets\css\screen_Main.css" />
+    <Content Include="Assets\css\screen_Menu.css" />
+    <Content Include="Assets\css\screen_Navigation.css" />
+    <Content Include="Assets\css\screen_Resize.css" />
+    <Content Include="Assets\css\screen_Scene.css" />
+    <Content Include="Assets\css\screen_Site.css" />
+    <Content Include="Assets\css\Season.css" />
     <Content Include="Assets\images\arms.gif" />
     <Content Include="Assets\images\background\01.jpg" />
     <Content Include="Assets\images\background\02.jpg" />
@@ -158,17 +163,24 @@
     <Content Include="Assets\images\boxes\yellow_background.jpg" />
     <Content Include="Assets\images\favicon.png" />
     <Content Include="Assets\images\logo.png" />
+    <Content Include="Assets\images\matrix\arms.png" />
+    <Content Include="Assets\images\matrix\background.png" />
+    <Content Include="Assets\images\matrix\logo.png" />
+    <Content Include="Assets\images\matrix\prevnext.png" />
+    <Content Include="Assets\images\matrix\sign.png" />
     <Content Include="Assets\images\next.gif" />
     <Content Include="Assets\images\prev.gif" />
     <Content Include="Assets\images\sign.gif" />
     <Content Include="Assets\js\AjustBoxes.js" />
     <Content Include="Assets\js\Author\Adder.js" />
-    <Content Include="Assets\js\Author\Inputs.js" />
     <Content Include="Assets\js\Author\General.js" />
+    <Content Include="Assets\js\Author\Inputs.js" />
     <Content Include="Assets\js\Author\SaveChangeColor.js" />
-    <Content Include="Assets\js\Back.js" />
     <Content Include="Assets\js\Author\Suggestion.js" />
+    <Content Include="Assets\js\Back.js" />
     <Content Include="Assets\js\FontResizer.js" />
+    <Content Include="Assets\js\General.js" />
+    <Content Include="Assets\js\Legend.js" />
     <Content Include="Assets\js\lib\jquery-1.6.1.min.js" />
     <Content Include="Assets\js\lib\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Assets\js\lib\jquery.validate.min.js" />
@@ -178,73 +190,47 @@
     <Content Include="Assets\js\lib\StringExtension.js" />
     <Content Include="Assets\js\Menu.js" />
     <Content Include="Assets\js\SceneChanger.js" />
-    <Content Include="Assets\js\Legend.js" />
-    <Content Include="Assets\js\General.js" />
     <Content Include="Global.asax" />
-    <Content Include="Assets\css\screen_Site.css" />
     <Content Include="Messages\2013-05-09.xml" />
-    <Content Include="Web.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Structure\Structure.csproj">
-      <Project>{9A3430F3-6A6D-4D21-A4F0-F443725341CD}</Project>
-      <Name>Structure</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Season\Episode.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Season\Summary.cshtml" />
-    <Content Include="Views\Season\Author\Episode.cshtml" />
-    <Content Include="Views\Season\Author\TalkPiece.cshtml" />
-    <Content Include="Views\Season\Author\TellerPiece.cshtml" />
-    <Content Include="Views\Season\Author\Paragraph.cshtml" />
-    <Content Include="Views\Shared\Partial\Menu.cshtml" />
-    <Content Include="Views\Shared\Partial\Head.cshtml" />
-    <Content Include="Views\Shared\Partial\Css.cshtml" />
-    <Content Include="Views\Shared\Partial\Legend.cshtml" />
-    <Content Include="Views\Shared\Partial\LogOn.cshtml" />
-    <Content Include="Views\Shared\Partial\Js.cshtml" />
-    <Content Include="Views\Season\Suggestion.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Season\Intro.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Season\Author\AddEpisode.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Season\Author\Scene.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\Partial\ChangeScene.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Web.Online.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="Web.config" />
     <Content Include="Web.Local.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="Web.Online.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="Views\Web.config" />
+    <Content Include="packages.config" />
+    <None Include="Assets\images\matrix\background_borderless.rar" />
+    <None Include="Assets\images\matrix\background_original.rar" />
+    <Content Include="Views\Season\Author\AddEpisode.cshtml" />
+    <Content Include="Views\Season\Author\Episode.cshtml" />
+    <Content Include="Views\Season\Author\Paragraph.cshtml" />
+    <Content Include="Views\Season\Author\Scene.cshtml" />
+    <Content Include="Views\Season\Author\TalkPiece.cshtml" />
+    <Content Include="Views\Season\Author\TellerPiece.cshtml" />
+    <Content Include="Views\Season\Episode.cshtml" />
+    <Content Include="Views\Season\Intro.cshtml" />
+    <Content Include="Views\Season\Suggestion.cshtml" />
+    <Content Include="Views\Season\Summary.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\Partial\ChangeScene.cshtml" />
+    <Content Include="Views\Shared\Partial\Css.cshtml" />
+    <Content Include="Views\Shared\Partial\Head.cshtml" />
+    <Content Include="Views\Shared\Partial\Js.cshtml" />
+    <Content Include="Views\Shared\Partial\Legend.cshtml" />
+    <Content Include="Views\Shared\Partial\LogOn.cshtml" />
+    <Content Include="Views\Shared\Partial\Menu.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target> -->
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
     <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
   </Target>
@@ -254,7 +240,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>1176</DevelopmentServerPort>
+          <DevelopmentServerPort>1728</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
@@ -267,4 +253,10 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target> -->
 </Project>
