[SITE] Added countdown
by [Dara Keon (desktop)] in [2014-02-01 23:16:22 (-02:00)]

--- a/Structure/Structure.csproj
+++ b/Structure/Structure.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Entities\Season.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Helpers\Config.cs" />
+    <Compile Include="Helpers\Countdown.cs" />
     <Compile Include="Helpers\StoriesException.cs" />
     <Compile Include="Helpers\UrlUserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
