--- a/Presentation/Web.config
+++ b/Presentation/Web.config
@@ -13,6 +13,9 @@
     <add key="Stories" value="..\..\..\..\Handhara\MEAK\Stories\" />
     <add key="Messages" value="Messages" />
 
+    <add key="CountdownStart" value="1986-03-27 04:20:00"/>
+    <add key="CountdownFrequency" value="27"/>
+
     <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 
   </appSettings>
