--- a/Presentation/Web.IIS.config
+++ b/Presentation/Web.IIS.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <appSettings>
-    <add key="Stories" value="C:\Lucas\Handhara\MEAK\Stories\"
+    <add key="Stories" value="C:\Lucas\Dara\MEAK\Stories\"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
