[SITE] Changed facebook image; fixed publish profile
by [Dara Keon (Ísis)] in [2015-04-24 17:13:08 (-03:00)]

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -201,7 +201,7 @@
     <Content Include="Assets\images\next.gif" />
     <Content Include="Assets\images\prev.gif" />
     <Content Include="Assets\images\sign.gif" />
-    <Content Include="Assets\images\site-name.png" />
+    <Content Include="Assets\images\facebook.png" />
     <Content Include="Assets\js\AjustBoxes.js" />
     <Content Include="Assets\js\Author\Adder.js" />
     <Content Include="Assets\js\Author\General.js" />
@@ -241,7 +241,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\Partial\ChangeScene.cshtml" />
     <Content Include="Views\Shared\Partial\Css.cshtml" />
-    <Content Include="Views\Shared\Partial\Head.cshtml" />
     <Content Include="Views\Shared\Partial\Js.cshtml" />
     <Content Include="Views\Shared\Partial\Legend.cshtml" />
     <Content Include="Views\Shared\Partial\LogOn.cshtml" />
