--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -223,6 +223,7 @@
     <Content Include="Assets\js\lib\StringExtension.js" />
     <Content Include="Assets\js\Menu.js" />
     <Content Include="Assets\js\SceneChanger.js" />
+    <Content Include="Assets\js\Trigger.js" />
     <Content Include="Global.asax" />
     <Content Include="Messages\2013-05-09.xml" />
     <Content Include="Web.config">
