[SITE] Ajust path
by [Dara Keon (Ísis)] in [2015-07-08 19:42:04 (-03:00)]

--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -10,7 +10,7 @@
     <add key="ClientValidationEnabled" value="true" /> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Stories" value="..\..\..\..\Dara\MEAK\Stories\" />
+    <add key="Stories" value="..\..\..\..\..\Dara\MEAK\Stories\" />
     <add key="Messages" value="Messages" />
 
     <add key="CountdownStart" value="1986-03-27 04:20:00"/>
