[SITE] Translate talk style; refactor;
by [Dara Keon (Ísis)] in [2015-07-09 22:53:23 (-03:00)]

--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -172,6 +172,7 @@
     <Content Include="Assets\css\Author\screen_LogOn.css" />
     <Content Include="Assets\css\Author\screen_Suggestion.css" />
     <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
+    <Content Include="Assets\css\Author\screen_EditEpisode.css" />
     <Content Include="Assets\css\Episode.css" />
     <Content Include="Assets\css\Main.css" />
     <Content Include="Assets\css\print_Print.css" />
