--- a/Site/Presentation/Presentation.csproj
+++ b/Site/Presentation/Presentation.csproj
@@ -169,7 +169,7 @@
     <Content Include="Assets\css\Author\screen_AddEpisode.css" />
     <Content Include="Assets\css\Author\screen_Adder.css" />
     <Content Include="Assets\css\Author\screen_Form.css" />
-    <Content Include="Assets\css\Author\screen_LogOn.css" />
+    <Content Include="Assets\css\screen_LogOn.css" />
     <Content Include="Assets\css\Author\screen_Suggestion.css" />
     <Content Include="Assets\css\Author\screen_ViewStoryLink.css" />
     <Content Include="Assets\css\Author\screen_EditEpisode.css" />
