--- a/Site/Structure/Structure.csproj
+++ b/Site/Structure/Structure.csproj
@@ -105,6 +105,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Library\Ak\Ak.Generic.dll</HintPath>
     </Reference>
+    <Reference Include="Ak.MVC">
+      <HintPath>..\Library\Ak\Ak.MVC.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
