--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -13,8 +13,8 @@
     <add key="Stories" value="..\..\..\..\..\Dara\MEAK\Stories\" />
     <add key="Messages" value="Messages" />
 
-    <add key="CountdownStart" value="1986-03-27 04:20:00"/>
-    <add key="CountdownFrequency" value="7"/>
+    <add key="CountdownStart" value="27/03"/>
+    <add key="CountdownFrequency" value="14"/>
 
     <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 
