[SITE] Adjust in globalization
by [Dara Keon (Ísis)] in [2015-10-19 03:02:27 (-02:00)]

--- a/Site/Presentation/Web.config
+++ b/Site/Presentation/Web.config
@@ -5,56 +5,59 @@
   -->
 
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="ClientValidationEnabled" value="true" /> 
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<appSettings>
+		<add key="webpages:Version" value="2.0.0.0" />
+		<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Stories" value="..\..\..\..\..\Dara\MEAK\Stories\" />
-    <add key="Messages" value="Messages" />
+		<add key="Stories" value="..\..\..\..\..\Dara\MEAK\Stories\" />
+		<add key="Messages" value="Messages" />
 
-    <add key="CountdownStart" value="27/03"/>
-    <add key="CountdownFrequency" value="14"/>
+		<add key="CountdownStart" value="27/03"/>
+		<add key="CountdownFrequency" value="14"/>
 
-    <add key="aspnet:MaxHttpCollectionKeys" value="5000" />
+		<add key="aspnet:MaxHttpCollectionKeys" value="5000" />
 
-  </appSettings>
-    
-  <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-      </assemblies>
-    </compilation>
+	</appSettings>
 
-    <authentication mode="Forms">
-      <forms loginUrl="~/" timeout="2880" />
-    </authentication>
+	<system.web>
+		<compilation debug="true" targetFramework="4.0">
+			<assemblies>
+			</assemblies>
+		</compilation>
 
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
-      </namespaces>
-    </pages>
+		<authentication mode="Forms">
+			<forms loginUrl="~/" timeout="2880" />
+		</authentication>
 
-    <customErrors mode="Off" />
-  </system.web>
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.Helpers" />
+				<add namespace="System.Web.Mvc" />
+				<add namespace="System.Web.Mvc.Ajax" />
+				<add namespace="System.Web.Mvc.Html" />
+				<add namespace="System.Web.Routing" />
+				<add namespace="System.Web.WebPages"/>
+			</namespaces>
+		</pages>
 
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <!--modules runAllManagedModulesForAllRequests="true"/-->
-  </system.webServer>
+		<customErrors mode="Off" />
 
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="4.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+		<globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="pt-BR" uiCulture="pt-BR" />
+	</system.web>
+
+	<system.webServer>
+		<validation validateIntegratedModeConfiguration="false"/>
+		<!--modules runAllManagedModulesForAllRequests="true"/-->
+	</system.webServer>
+
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="4.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+
 </configuration>
